syntax = "proto3";
option java_multiple_files = true;

package lk.sadeep.iit.retail.communication.grpc.generated;

message UpdateStockCheckoutItems {
  int64 itemId = 1;
  int32 requestedQty = 2;
}

message UpdateStockCheckoutRequest {
  int64 customerId = 1;
  repeated UpdateStockCheckoutItems update_stock_checkout_items = 2;
}

message UpdateStockCheckoutResponse {
  bool isUpdated = 1;
  string responseMessage = 2;
}

service OnlineRetailService {
  rpc updateStockCheckout(UpdateStockCheckoutRequest) returns (UpdateStockCheckoutResponse);
}